--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -424,11 +424,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:17:41.553941Z",
-     "start_time": "2019-03-27T03:17:41.541998Z"
+     "end_time": "2019-03-27T03:18:30.068456Z",
+     "start_time": "2019-03-27T03:18:30.057935Z"
     }
    },
    "outputs": [
@@ -436,18 +436,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "['AddChild', 'ChildrenToString', 'IndentString', 'TreeToString', 'UCTSelectChild', 'Update', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'childNodes', 'move', 'parentNode', 'playerJustMoved', 'untriedMoves', 'visits', 'wins']\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'rootstate'",
+     "evalue": "TreeToString() missing 1 required positional argument: 'indent'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-1a69cea7e2e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#         m = UCT(rootstate = state, itermax = 1000, verbose = False)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mmy_node\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrootstate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mitermax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'rootstate'"
+      "\u001b[1;32m<ipython-input-42-17cccc7764df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mmy_node\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_node\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTreeToString\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: TreeToString() missing 1 required positional argument: 'indent'"
      ]
     }
    ],
@@ -459,7 +460,9 @@
     "#     if state.playerJustMoved == 1:\n",
     "#         m = UCT(rootstate = state, itermax = 1000, verbose = False)\n",
     "\n",
-    "my_node = Node(rootstate=state,itermax=10,verbose = True)"
+    "my_node = Node(state=state)\n",
+    "print(dir(my_node))\n",
+    "print(my_node.TreeToString())"
    ]
   },
   {
