--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -429,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:19:18.070749Z",
-     "start_time": "2019-03-27T03:19:18.065788Z"
+     "end_time": "2019-03-27T03:23:25.204714Z",
+     "start_time": "2019-03-27T03:23:25.193719Z"
     }
    },
    "outputs": [
@@ -441,10 +441,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "['AddChild', 'ChildrenToString', 'IndentString', 'TreeToString', 'UCTSelectChild', 'Update', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'childNodes', 'move', 'parentNode', 'playerJustMoved', 'untriedMoves', 'visits', 'wins']\n",
-      "\n",
-      "| [M:None W/V:0/0 U:[]]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Node' object has no attribute 'Clone'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-49-49f01ea35945>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mmy_node\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmy_node\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Node' object has no attribute 'Clone'"
      ]
     }
    ],
@@ -457,16 +465,18 @@
     "#         m = UCT(rootstate = state, itermax = 1000, verbose = False)\n",
     "\n",
     "my_node = Node(state=state)\n",
+    "state   = my_node.Clone()\n",
+    "print(state)\n",
     "print(dir(my_node))\n",
     "print(my_node.TreeToString())\n",
     "\n",
-    "        node  = rootnode\n",
-    "        state = rootstate.Clone()\n",
+    "#         node  = rootnode\n",
+    "#         state = rootstate.Clone()\n",
     "\n",
-    "        # Select\n",
-    "        while node.untriedMoves == [] and node.childNodes != []: # node is fully expanded and non-terminal\n",
-    "            node = node.UCTSelectChild()\n",
-    "            state.DoMove(node.move)"
+    "#         # Select\n",
+    "#         while node.untriedMoves == [] and node.childNodes != []: # node is fully expanded and non-terminal\n",
+    "#             node = node.UCTSelectChild()\n",
+    "#             state.DoMove(node.move)"
    ]
   },
   {
