--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -27,8 +27,7 @@
     },
     "code_folding": [
      1,
-     2,
-     36
+     2
     ]
    },
    "outputs": [],
@@ -124,17 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:19:08.561696Z",
-     "start_time": "2019-03-27T03:19:08.384179Z"
+     "end_time": "2019-03-27T03:42:34.844188Z",
+     "start_time": "2019-03-27T03:42:34.689579Z"
     },
     "code_folding": [
      39,
-     44,
-     48,
-     53
+     43,
+     47
     ],
     "scrolled": false
    },
@@ -147,109 +145,109 @@
       "...\n",
       "...\n",
       "\n",
-      "[M:8 W/V:3.5/7 U:[2, 7]]\n",
-      "[M:2 W/V:13.5/15 U:[]]\n",
-      "[M:3 W/V:8.5/11 U:[]]\n",
-      "[M:1 W/V:3.0/7 U:[0, 3]]\n",
-      "[M:0 W/V:11.5/14 U:[]]\n",
-      "[M:6 W/V:9.5/12 U:[]]\n",
-      "[M:5 W/V:4.5/8 U:[0]]\n",
-      "[M:4 W/V:9.5/12 U:[]]\n",
-      "[M:7 W/V:12.0/14 U:[]]\n",
+      "[M:5 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 6, 7, 8]]\n",
+      "[M:1 Wins/Visits:0.0/1 U:[0, 2, 3, 4, 5, 6, 7, 8]]\n",
+      "[M:2 Wins/Visits:1.0/1 U:[0, 1, 3, 4, 5, 6, 7, 8]]\n",
+      "[M:0 Wins/Visits:1.0/1 U:[1, 2, 3, 4, 5, 6, 7, 8]]\n",
+      "[M:6 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 7, 8]]\n",
+      "[M:8 Wins/Visits:0.5/1 U:[0, 1, 2, 3, 4, 5, 6, 7]]\n",
+      "[M:3 Wins/Visits:0.5/1 U:[0, 1, 2, 4, 5, 6, 7, 8]]\n",
+      "[M:7 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 6, 8]]\n",
+      "[M:4 Wins/Visits:2.0/2 U:[0, 2, 3, 5, 6, 7, 8]]\n",
       "\n",
-      "Best Move: 2\n",
+      "Best Move: 4\n",
       "\n",
-      "..X\n",
       "...\n",
+      ".X.\n",
       "...\n",
       "\n",
-      "[M:0 W/V:78.0/220 U:[]]\n",
-      "[M:1 W/V:26.0/107 U:[]]\n",
-      "[M:8 W/V:14.0/78 U:[]]\n",
-      "[M:4 W/V:35.5/129 U:[]]\n",
-      "[M:7 W/V:17.0/85 U:[]]\n",
-      "[M:3 W/V:41.5/142 U:[]]\n",
-      "[M:5 W/V:26.0/107 U:[]]\n",
-      "[M:6 W/V:37.0/132 U:[]]\n",
+      "[M:8 Wins/Visits:8.0/75 U:[]]\n",
+      "[M:2 Wins/Visits:15.5/97 U:[]]\n",
+      "[M:1 Wins/Visits:27.5/131 U:[]]\n",
+      "[M:6 Wins/Visits:32.5/141 U:[]]\n",
+      "[M:5 Wins/Visits:11.0/84 U:[]]\n",
+      "[M:0 Wins/Visits:89.5/283 U:[]]\n",
+      "[M:7 Wins/Visits:4.0/62 U:[]]\n",
+      "[M:3 Wins/Visits:26.0/127 U:[]]\n",
       "\n",
       "Best Move: 0\n",
       "\n",
-      "O.X\n",
-      "...\n",
+      "O..\n",
+      ".X.\n",
       "...\n",
       "\n",
-      "[M:4 W/V:15.0/22 U:[]]\n",
-      "[M:6 W/V:14.5/22 U:[]]\n",
-      "[M:3 W/V:6.0/13 U:[]]\n",
-      "[M:7 W/V:0.5/6 U:[8]]\n",
-      "[M:8 W/V:9.0/16 U:[]]\n",
-      "[M:5 W/V:4.0/11 U:[]]\n",
-      "[M:1 W/V:3.5/10 U:[]]\n",
+      "[M:7 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 8]]\n",
+      "[M:8 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 7]]\n",
+      "[M:5 Wins/Visits:1.0/1 U:[1, 2, 3, 6, 7, 8]]\n",
+      "[M:6 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 7, 8]]\n",
+      "[M:1 Wins/Visits:1.0/2 U:[2, 3, 5, 7, 8]]\n",
+      "[M:2 Wins/Visits:1.5/2 U:[1, 3, 6, 7, 8]]\n",
+      "[M:3 Wins/Visits:2.0/2 U:[1, 2, 5, 6, 7]]\n",
+      "\n",
+      "Best Move: 3\n",
+      "\n",
+      "O..\n",
+      "XX.\n",
+      "...\n",
+      "\n",
+      "[M:1 Wins/Visits:57.0/217 U:[]]\n",
+      "[M:5 Wins/Visits:70.0/250 U:[]]\n",
+      "[M:7 Wins/Visits:18.0/111 U:[]]\n",
+      "[M:2 Wins/Visits:57.0/215 U:[]]\n",
+      "[M:8 Wins/Visits:7.0/77 U:[]]\n",
+      "[M:6 Wins/Visits:24.5/130 U:[]]\n",
+      "\n",
+      "Best Move: 5\n",
+      "\n",
+      "O..\n",
+      "XXO\n",
+      "...\n",
+      "\n",
+      "[M:1 Wins/Visits:2.0/2 U:[6, 7, 8]]\n",
+      "[M:7 Wins/Visits:1.0/2 U:[1, 6, 8]]\n",
+      "[M:8 Wins/Visits:1.5/2 U:[1, 2, 6]]\n",
+      "[M:6 Wins/Visits:2.0/2 U:[2, 7, 8]]\n",
+      "[M:2 Wins/Visits:1.5/2 U:[6, 7, 8]]\n",
+      "\n",
+      "Best Move: 2\n",
+      "\n",
+      "O.X\n",
+      "XXO\n",
+      "...\n",
+      "\n",
+      "[M:1 Wins/Visits:10.5/69 U:[]]\n",
+      "[M:6 Wins/Visits:387.0/823 U:[]]\n",
+      "[M:7 Wins/Visits:10.5/69 U:[]]\n",
+      "[M:8 Wins/Visits:0.0/39 U:[]]\n",
       "\n",
       "Best Move: 6\n",
       "\n",
       "O.X\n",
-      "...\n",
-      "X..\n",
+      "XXO\n",
+      "O..\n",
       "\n",
-      "[M:7 W/V:16.0/63 U:[]]\n",
-      "[M:4 W/V:427.5/724 U:[]]\n",
-      "[M:3 W/V:8.0/46 U:[]]\n",
-      "[M:8 W/V:20.0/71 U:[]]\n",
-      "[M:1 W/V:5.0/39 U:[]]\n",
-      "[M:5 W/V:13.0/57 U:[]]\n",
-      "\n",
-      "Best Move: 4\n",
-      "\n",
-      "O.X\n",
-      ".O.\n",
-      "X..\n",
-      "\n",
-      "[M:8 W/V:26.0/44 U:[]]\n",
-      "[M:7 W/V:5.0/17 U:[]]\n",
-      "[M:3 W/V:1.0/10 U:[]]\n",
-      "[M:1 W/V:2.0/11 U:[]]\n",
-      "[M:5 W/V:6.0/18 U:[]]\n",
-      "\n",
-      "Best Move: 8\n",
-      "\n",
-      "O.X\n",
-      ".O.\n",
-      "X.X\n",
-      "\n",
-      "[M:7 W/V:239.5/451 U:[]]\n",
-      "[M:3 W/V:11.0/55 U:[]]\n",
-      "[M:5 W/V:236.5/446 U:[]]\n",
-      "[M:1 W/V:8.0/48 U:[]]\n",
-      "\n",
-      "Best Move: 7\n",
-      "\n",
-      "O.X\n",
-      ".O.\n",
-      "XOX\n",
-      "\n",
-      "[M:3 W/V:2.0/15 U:[]]\n",
-      "[M:5 W/V:3.0/16 U:[]]\n",
-      "[M:1 W/V:40.0/69 U:[]]\n",
+      "[M:7 Wins/Visits:2.0/3 U:[]]\n",
+      "[M:8 Wins/Visits:1.5/3 U:[]]\n",
+      "[M:1 Wins/Visits:3.0/4 U:[]]\n",
       "\n",
       "Best Move: 1\n",
       "\n",
       "OXX\n",
-      ".O.\n",
-      "XOX\n",
+      "XXO\n",
+      "O..\n",
       "\n",
-      "[M:3 W/V:0.0/36 U:[]]\n",
-      "[M:5 W/V:482.0/964 U:[]]\n",
+      "[M:7 Wins/Visits:482.0/964 U:[]]\n",
+      "[M:8 Wins/Visits:0.0/36 U:[]]\n",
       "\n",
-      "Best Move: 5\n",
+      "Best Move: 7\n",
       "\n",
       "OXX\n",
-      ".OO\n",
-      "XOX\n",
+      "XXO\n",
+      "OO.\n",
       "\n",
-      "[M:3 W/V:50.0/100 U:[]]\n",
+      "[M:8 Wins/Visits:5.0/10 U:[]]\n",
       "\n",
-      "Best Move: 3\n",
+      "Best Move: 8\n",
       "\n",
       "Nobody wins!\n"
      ]
@@ -355,7 +353,7 @@
     "    if state.playerJustMoved == 1:\n",
     "        m = UCT(rootstate = state, itermax = 1000, verbose = False) # play with values for itermax and verbose = True\n",
     "    else:\n",
-    "        m = UCT(rootstate = state, itermax = 100, verbose = False)\n",
+    "        m = UCT(rootstate = state, itermax = 10,   verbose = False)\n",
     "    print(\"Best Move: \" + str(m) + \"\\n\")\n",
     "    state.DoMove(m)\n",
     "\n",
