--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -111,7 +111,6 @@
     "                else:\n",
     "                    return 0.0\n",
     "        if self.GetMoves() == []: return 0.5 # draw\n",
-    "        assert False # Should not be possible to get here\n",
     "\n",
     "    def __repr__(self):\n",
     "        s= \"\"\n",
@@ -123,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:42:34.844188Z",
-     "start_time": "2019-03-27T03:42:34.689579Z"
+     "end_time": "2019-03-27T03:43:09.043327Z",
+     "start_time": "2019-03-27T03:43:08.861816Z"
     },
     "code_folding": [
      39,
@@ -146,110 +145,94 @@
       "...\n",
       "\n",
       "[M:5 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 6, 7, 8]]\n",
-      "[M:1 Wins/Visits:0.0/1 U:[0, 2, 3, 4, 5, 6, 7, 8]]\n",
-      "[M:2 Wins/Visits:1.0/1 U:[0, 1, 3, 4, 5, 6, 7, 8]]\n",
-      "[M:0 Wins/Visits:1.0/1 U:[1, 2, 3, 4, 5, 6, 7, 8]]\n",
-      "[M:6 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 7, 8]]\n",
-      "[M:8 Wins/Visits:0.5/1 U:[0, 1, 2, 3, 4, 5, 6, 7]]\n",
-      "[M:3 Wins/Visits:0.5/1 U:[0, 1, 2, 4, 5, 6, 7, 8]]\n",
-      "[M:7 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 6, 8]]\n",
-      "[M:4 Wins/Visits:2.0/2 U:[0, 2, 3, 5, 6, 7, 8]]\n",
+      "[M:8 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 6, 7]]\n",
       "\n",
-      "Best Move: 4\n",
+      "Best Move: 8\n",
       "\n",
       "...\n",
-      ".X.\n",
       "...\n",
+      "..X\n",
       "\n",
-      "[M:8 Wins/Visits:8.0/75 U:[]]\n",
-      "[M:2 Wins/Visits:15.5/97 U:[]]\n",
-      "[M:1 Wins/Visits:27.5/131 U:[]]\n",
-      "[M:6 Wins/Visits:32.5/141 U:[]]\n",
-      "[M:5 Wins/Visits:11.0/84 U:[]]\n",
-      "[M:0 Wins/Visits:89.5/283 U:[]]\n",
-      "[M:7 Wins/Visits:4.0/62 U:[]]\n",
-      "[M:3 Wins/Visits:26.0/127 U:[]]\n",
+      "[M:7 Wins/Visits:22.0/76 U:[]]\n",
+      "[M:6 Wins/Visits:38.0/107 U:[]]\n",
+      "[M:0 Wins/Visits:125.5/259 U:[]]\n",
+      "[M:5 Wins/Visits:32.0/96 U:[]]\n",
+      "[M:1 Wins/Visits:42.5/116 U:[]]\n",
+      "[M:4 Wins/Visits:52.0/133 U:[]]\n",
+      "[M:2 Wins/Visits:65.0/156 U:[]]\n",
+      "[M:3 Wins/Visits:12.5/57 U:[]]\n",
       "\n",
       "Best Move: 0\n",
       "\n",
       "O..\n",
-      ".X.\n",
       "...\n",
+      "..X\n",
       "\n",
-      "[M:7 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 8]]\n",
-      "[M:8 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 7]]\n",
-      "[M:5 Wins/Visits:1.0/1 U:[1, 2, 3, 6, 7, 8]]\n",
-      "[M:6 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 7, 8]]\n",
-      "[M:1 Wins/Visits:1.0/2 U:[2, 3, 5, 7, 8]]\n",
-      "[M:2 Wins/Visits:1.5/2 U:[1, 3, 6, 7, 8]]\n",
-      "[M:3 Wins/Visits:2.0/2 U:[1, 2, 5, 6, 7]]\n",
+      "[M:4 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 7]]\n",
+      "[M:7 Wins/Visits:0.0/1 U:[1, 2, 3, 4, 5, 6]]\n",
+      "\n",
+      "Best Move: 7\n",
+      "\n",
+      "O..\n",
+      "...\n",
+      ".XX\n",
+      "\n",
+      "[M:3 Wins/Visits:20.0/46 U:[]]\n",
+      "[M:2 Wins/Visits:85.0/128 U:[]]\n",
+      "[M:6 Wins/Visits:592.5/695 U:[]]\n",
+      "[M:1 Wins/Visits:20.5/47 U:[]]\n",
+      "[M:5 Wins/Visits:16.5/41 U:[]]\n",
+      "[M:4 Wins/Visits:18.0/43 U:[]]\n",
+      "\n",
+      "Best Move: 6\n",
+      "\n",
+      "O..\n",
+      "...\n",
+      "OXX\n",
+      "\n",
+      "[M:2 Wins/Visits:0.5/1 U:[1, 3, 4, 5]]\n",
+      "[M:4 Wins/Visits:0.5/1 U:[1, 2, 3, 5]]\n",
+      "\n",
+      "Best Move: 4\n",
+      "\n",
+      "O..\n",
+      ".X.\n",
+      "OXX\n",
+      "\n",
+      "[M:2 Wins/Visits:245.0/259 U:[]]\n",
+      "[M:3 Wins/Visits:442.0/442 U:[]]\n",
+      "[M:5 Wins/Visits:21.5/38 U:[]]\n",
+      "[M:1 Wins/Visits:247.0/261 U:[]]\n",
       "\n",
       "Best Move: 3\n",
       "\n",
       "O..\n",
-      "XX.\n",
-      "...\n",
+      "OX.\n",
+      "OXX\n",
       "\n",
-      "[M:1 Wins/Visits:57.0/217 U:[]]\n",
-      "[M:5 Wins/Visits:70.0/250 U:[]]\n",
-      "[M:7 Wins/Visits:18.0/111 U:[]]\n",
-      "[M:2 Wins/Visits:57.0/215 U:[]]\n",
-      "[M:8 Wins/Visits:7.0/77 U:[]]\n",
-      "[M:6 Wins/Visits:24.5/130 U:[]]\n",
-      "\n",
-      "Best Move: 5\n",
-      "\n",
-      "O..\n",
-      "XXO\n",
-      "...\n",
-      "\n",
-      "[M:1 Wins/Visits:2.0/2 U:[6, 7, 8]]\n",
-      "[M:7 Wins/Visits:1.0/2 U:[1, 6, 8]]\n",
-      "[M:8 Wins/Visits:1.5/2 U:[1, 2, 6]]\n",
-      "[M:6 Wins/Visits:2.0/2 U:[2, 7, 8]]\n",
-      "[M:2 Wins/Visits:1.5/2 U:[6, 7, 8]]\n",
+      "[M:5 Wins/Visits:0.0/1 U:[1, 2]]\n",
+      "[M:2 Wins/Visits:0.0/1 U:[1, 5]]\n",
       "\n",
       "Best Move: 2\n",
       "\n",
       "O.X\n",
-      "XXO\n",
-      "...\n",
+      "OX.\n",
+      "OXX\n",
       "\n",
-      "[M:1 Wins/Visits:10.5/69 U:[]]\n",
-      "[M:6 Wins/Visits:387.0/823 U:[]]\n",
-      "[M:7 Wins/Visits:10.5/69 U:[]]\n",
-      "[M:8 Wins/Visits:0.0/39 U:[]]\n",
-      "\n",
-      "Best Move: 6\n",
-      "\n",
-      "O.X\n",
-      "XXO\n",
-      "O..\n",
-      "\n",
-      "[M:7 Wins/Visits:2.0/3 U:[]]\n",
-      "[M:8 Wins/Visits:1.5/3 U:[]]\n",
-      "[M:1 Wins/Visits:3.0/4 U:[]]\n",
+      "[M:5 Wins/Visits:500.0/500 U:[]]\n",
+      "[M:1 Wins/Visits:500.0/500 U:[]]\n",
       "\n",
       "Best Move: 1\n",
       "\n",
+      "OOX\n",
+      "OX.\n",
       "OXX\n",
-      "XXO\n",
-      "O..\n",
       "\n",
-      "[M:7 Wins/Visits:482.0/964 U:[]]\n",
-      "[M:8 Wins/Visits:0.0/36 U:[]]\n",
+      "[M:5 Wins/Visits:0.0/2 U:[]]\n",
       "\n",
-      "Best Move: 7\n",
+      "Best Move: 5\n",
       "\n",
-      "OXX\n",
-      "XXO\n",
-      "OO.\n",
-      "\n",
-      "[M:8 Wins/Visits:5.0/10 U:[]]\n",
-      "\n",
-      "Best Move: 8\n",
-      "\n",
-      "Nobody wins!\n"
+      "Player 2 wins!\n"
      ]
     }
    ],
@@ -353,9 +336,11 @@
     "    if state.playerJustMoved == 1:\n",
     "        m = UCT(rootstate = state, itermax = 1000, verbose = False) # play with values for itermax and verbose = True\n",
     "    else:\n",
-    "        m = UCT(rootstate = state, itermax = 10,   verbose = False)\n",
+    "        m = UCT(rootstate = state, itermax = 2,   verbose = False)\n",
     "    print(\"Best Move: \" + str(m) + \"\\n\")\n",
     "    state.DoMove(m)\n",
+    "    \n",
+    "    if state.\n",
     "\n",
     "# print the \n",
     "if state.GetResult(state.playerJustMoved) == 1.0:  print(\"Player \" + str(state.playerJustMoved)     + \" wins!\")\n",
