--- a/reinforcement learning/MCTS/third.ipynb
+++ b/reinforcement learning/MCTS/third.ipynb
@@ -2,33 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:25:59.150509Z",
-     "start_time": "2019-03-28T17:25:34.342609Z"
+     "start_time": "2019-03-28T17:26:48.785Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Took 24.78270125389099 sec to run 10000 times\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'resource'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-54617bb24d3f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[0mtock\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Took %s sec to run %s times\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtock\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtick\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_reads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mresource\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Consumed %sB memory\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mresource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetrusage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRUSAGE_SELF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mru_maxrss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'resource'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import math\n",
@@ -105,9 +85,7 @@
     "tick = time.time()\n",
     "UCT_search(GameState(), num_reads)\n",
     "tock = time.time()\n",
-    "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
-    "from resources import resources as resource\n",
-    "print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
+    "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))"
    ]
   },
   {
@@ -119,14 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:23:27.257535Z",
-     "start_time": "2019-03-28T17:23:03.206Z"
-    }
+     "end_time": "2019-03-28T17:26:44.762267Z",
+     "start_time": "2019-03-28T17:26:44.220908Z"
+    },
+    "code_folding": [
+     4
+    ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 0.5248441696166992 sec to run 10000 times\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "import numpy as np\n",
@@ -200,7 +189,6 @@
     "    self.child_total_value = collections.defaultdict(float)\n",
     "    self.child_number_visits = collections.defaultdict(float)\n",
     "\n",
-    "\n",
     "def UCT_search(game_state, num_reads):\n",
     "  root = UCTNode(game_state, move=None, parent=DummyNode())\n",
     "  for _ in range(num_reads):\n",
@@ -228,9 +216,7 @@
     "tick = time.time()\n",
     "UCT_search(GameState(), num_reads)\n",
     "tock = time.time()\n",
-    "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
-    "from resources import resources as resource\n",
-    "print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
+    "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))"
    ]
   },
   {
