--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -153,7 +153,8 @@
     "        temp = []\n",
     "        for child_node in self.childrens:\n",
     "            temp.append(\n",
-    "                (child_node.number_wins/child_node.number_visit+1) \n",
+    "                ((child_node.number_wins+1)/(child_node.number_visit+1)) + \n",
+    "                \n",
     "            )\n",
     "        pass\n",
     "    \n",
