--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 196,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:58:39.737310Z",
-     "start_time": "2019-04-10T02:58:39.704870Z"
+     "end_time": "2019-04-10T02:59:09.030799Z",
+     "start_time": "2019-04-10T02:59:08.982901Z"
     },
     "code_folding": [
      80,
@@ -3882,21 +3882,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.994 0.999]\n",
-      "[0.993 0.992 0.996]\n",
-      "[1.]\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "attribute 'T' of 'numpy.ndarray' objects is not writable",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-196-e62e01d61d50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mc2\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpand_dim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mw1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mw3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw3\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw3\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1e-8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: attribute 'T' of 'numpy.ndarray' objects is not writable"
      ]
     }
    ],
@@ -3915,8 +3908,8 @@
     "b2  = np.ones(expand_dim); \n",
     "c2  = np.zeros(expand_dim)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1.T)\n",
-    "w2 = _sym_decorrelation(w2.T)\n",
+    "w1.T = _sym_decorrelation(w1.T)\n",
+    "w2.T = _sym_decorrelation(w2.T)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "print((np.sqrt(np.sum(w1**2,0))))\n",
@@ -4014,30 +4007,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:58:53.963645Z",
-     "start_time": "2019-04-10T02:58:53.958632Z"
+     "end_time": "2019-04-10T02:59:20.068579Z",
+     "start_time": "2019-04-10T02:59:20.064581Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.732, -0.674],\n",
-       "       [-0.048,  0.029],\n",
-       "       [-0.671, -0.737]])"
+       "array([2.769, 0.403])"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(w1**2,0)\n",
-    "w1"
+    "np.sum(w1**2,1)\n"
    ]
   },
   {
