--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 201,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:59:20.068579Z",
-     "start_time": "2019-04-10T02:59:20.064581Z"
+     "end_time": "2019-04-10T02:59:26.094955Z",
+     "start_time": "2019-04-10T02:59:26.089968Z"
     }
    },
    "outputs": [
@@ -4021,13 +4021,13 @@
        "array([2.769, 0.403])"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(w1**2,1)\n"
+    "np.sum(w1.T**2,0)\n"
    ]
   },
   {
