--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 212,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:01:20.188717Z",
-     "start_time": "2019-04-10T03:01:20.179740Z"
+     "end_time": "2019-04-10T03:01:40.418043Z",
+     "start_time": "2019-04-10T03:01:40.412447Z"
     }
    },
    "outputs": [
@@ -4019,25 +4019,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.662 -0.498]\n",
-      " [-0.248 -1.581]\n",
-      " [ 0.986  1.077]\n",
-      " [-0.641 -0.389]\n",
-      " [ 1.936  0.102]\n",
-      " [-0.48  -0.169]\n",
-      " [ 1.196  1.187]\n",
-      " [-0.496 -0.163]\n",
-      " [ 0.536 -0.525]\n",
-      " [ 1.676 -0.231]]\n",
-      "[[-0.766 -0.633 -0.006]\n",
-      " [ 0.561 -0.728  0.28 ]]\n",
-      "[[ 0.519  0.029  0.8  ]\n",
-      " [-0.32   0.906  0.08 ]\n",
-      " [ 0.787  0.319 -0.519]]\n",
-      "[[-0.536]\n",
-      " [-0.585]\n",
-      " [-0.608]]\n",
-      "(10, 3)\n"
+      "1.9926023371428379\n"
      ]
     }
    ],
@@ -4047,14 +4029,14 @@
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
     "w1 = _sym_decorrelation(w1.T).T\n",
-    "w2 = _sym_decorrelation(w2)\n",
+    "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
-    "print(current_batch)\n",
-    "print(w1)\n",
-    "print(w2)\n",
-    "print(w3)\n",
-    "print((current_batch@w1).shape)"
+    "# print(current_batch)\n",
+    "print(np.sum(w1**2))\n",
+    "# print(w2)\n",
+    "# print(w3)\n",
+    "# print((current_batch@w1).shape)"
    ]
   },
   {
